CHANGES.txt - 08/04/2005
------------------------

CHANGES IN CUPS V1.2.0b1

	- The lp and lpr commands did not error out properly when
	  they were unable to write to a temporary file (STR
	  #1129)
	- The pstops filter did not handle Adobe-specific
	  comments in Windows NT driver output (STR #1085)
	- "lpstat -l -p" incorrectly reported the printer
	  interface (STR #936)
	- The web interface now operates exclusively with the
	  UTF-8 encoding, and sends the appropriate character set
	  and header information to the web browser (STR #919,
	  STR #1007)
	- Added a "set allowed users" interface to the web
	  interface so that you can set the list of allowed or
	  denied users/groups for a printer or class.
	- Disallow the "#" character in printer names, since it
	  has special meaning in the shell, config files, and in
	  URIs (STR #917, STR #1202)
	- Added a new application/x-csource MIME type, and
	  support for it to the texttops filter so that you can
	  pretty print plain text files without the C/C++
	  keywords being highlighted.
	- The pdftops filter did not compile with GCC 4.0 (STR
	  #1226)
	- The texttops filter did not highlight preprocessor
	  directives followed by a tab properly.
	- HP PJL output now uses both JOB DISPLAY and RDYMSG
	  commands to show the current job on the printer's
	  display (STR #1218)
	- Local authentication certificates are now stored in
	  /var/run/cups/certs by default instead of
	  /etc/cups/certs (STR #1211)
	- Backends now use "&" to separate options in device
	  URIs; "+" is still recognized but is deprecated (STR
	  #842)
	- The USB backend no longer supports the usb:/dev/foo
	  format on systems that support device ID queries.
	- Forced classification markings did not work when the
	  job-sheets parameters were "none,none".
	- "lpstat -l -p" incorrectly showed all users as allowed,
	  even if the queue was restricted to certain users (STR
	  #801)
	- The scheduler now automatically detects SSL/TLS clients